--- a/src/html/components/pc/pc-login-view/pc-login-view.html
+++ b/src/html/components/pc/pc-login-view/pc-login-view.html
@@ -2,10 +2,9 @@
 <pc-loader target='["pc-input","paper-button"]'></pc-loader>
 <dom-module id="pc-login-view">
 	<link rel="import" type="css" href="pc-login-view.css" inline/>
-	<link rel="import" type="css" href="/css/components.css"/>
 	<link rel="import" type="css" href="/css/component-transitions.css"/>
 	<template>
-		<form class="container transitions in-fade-in out-fade-out" id="loginform" method="POST">
+		<form class="transitions in-fade-in out-fade-out" id="loginform" method="POST">
 			<div class="form-group">
 				<pc-input label="Username" name="username" id="usernameInput"></pc-input>
 			</div>
