--- a/src/html/components/pc/pc-stage/pc-stage.css
+++ b/src/html/components/pc/pc-stage/pc-stage.css
@@ -95,6 +95,9 @@ paper-toolbar {
 	top: 60px;
 	position: absolute;
 }
+:host[mobile] .pc-view {
+	top: 50px;
+}
 :host .pc-view:not([active]){
 	display: none;
 }
