--- a/src/html/components/pc/pc-student-schedule-view/pc-student-schedule-view.css
+++ b/src/html/components/pc/pc-student-schedule-view/pc-student-schedule-view.css
@@ -19,8 +19,8 @@
 .attendance > span {
 	width: 100%;
 	display: block;
-	border-radius: 10px;
 	height: 100%;
+	border-radius: 10px;
 }
 .attendance:not(.future) span {
 	color: white;
@@ -49,7 +49,7 @@
 :host td>span.separator:after {
 	content: " - ";
 }
-:host[mobile] .attendance {
+:host[mobile] .attendance:not(.future) {
 	border-radius: 10px;
 }
 :host[mobile] .container {
