--- a/src/html/components/pc/pc-student-classpage-view/pc-student-classpage-view.html
+++ b/src/html/components/pc/pc-student-classpage-view/pc-student-classpage-view.html
@@ -6,7 +6,7 @@
 	<link rel="import" type="css" href="/css/component-transitions.css"/>
 	<template>
 		<h1 class="page-header" id="header">Class Name</h1>
-		<paper-tabs selected="0" noink id="tabs">
+		<paper-tabs noink id="tabs">
 			<paper-tab>Home</paper-tab>
 			<paper-tab>Resources</paper-tab>
 			<paper-tab>Assignments</paper-tab>
