--- a/src/html/components/pc/pc-student-clubs-view/pc-student-clubs-view.css
+++ b/src/html/components/pc/pc-student-clubs-view/pc-student-clubs-view.css
@@ -3,27 +3,31 @@
 	display: block;
 	font-family: RobotoDraft,Roboto,Helvetica Neue,Helvetica,Arial,sans-serif;
 	width: 100%;
-	padding-bottom: 20px;
-	box-sizing: border-box;
 }
 :host:not([active]) {
 	display: none;
 }
 #list {
-	padding: 0 50px;
+	padding: 0 15px;
 }
 #list > li {
 	margin-bottom: 10px;
 	background-color: white;
 	padding: 19px;
 	list-style-type: none;
-	transition: transform .5s ease-in-out;
+	transition: transform .3s ease-out;
 	transform: none;
 	font-smoothing: antialiased !important;
 	-webkit-font-smoothing: antialiased !important;
 	border-width: 1px;
 	border-color: rgba(0,0,0,0);
 	border-style: solid;
+	position:relative;/* for paper-ripple */
+	/*Disallow user selection (annoying) */
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
 }
 #list > li > .name {
 	font-size: 18px;
@@ -39,9 +43,7 @@
 	opacity: .7;
 	font-size: 12px;
 }
-#list > li:hover {
-	transform: scale(1.05);
-}
-#list > li:focus {
+#list > li.pushed {
 	border-color: #3498db;
+	transform: scale(.98);
 }
